applications/software/home1/stalwart/roundcube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  labels:
    app: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
        - name: roundcube
          image: mirror.gcr.io/roundcube/roundcubemail:latest@sha256:b7dff74ff626239eabc9b85cfad56b71e99c23a1ad260d119006ed0cbd2c5ad0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 1
              memory: 500Mi
