applications/software/home1/stalwart/roundcube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: roundcube
