applications/software/home1/stalwart/roundcube/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundcube
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "mail.yewolf.fr"
    - "mail.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: roundcube
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "60s"
        backendRequest: "60s"
